[package]
name = "crlf-converter"
description = "Convert CRLF files to LF and vice versa"
version = "0.1.4"
authors = ["fren_gor <goro@frengor.com>"]
readme = "README.md"
repository = "https://github.com/frengor/CRLF-Converter"
license = "Apache-2.0"
edition = "2021"

[dependencies]
structopt = "0.3.25"
anyhow = "1.0.52"
