[package]
name = "crlf-converter"
description = "Convert CRLF files to LF and vice versa"
version = "0.1.5"
authors = ["fren_gor <goro@frengor.com>"]
readme = "README.md"
repository = "https://github.com/frengor/CRLF-Converter"
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
